 + Space Invasion: Add a default Space Invasion game scheme
 + Capture the Flag: Can now be played with more than 2 clans
 + Capture the Flag: Show team scores and score graph in stats screen
 + HedgeEditor: Show cursor coordinates in top left corner
 + Control: Always remove TimeBox and Resurrector
 + Climb Home: Show messages when a fire cake is nearby and when you're inside home
 * The Specialists: Less buggy hog switching at turn start
 * Mutant: When game ends due to all land being gone, declare the highest-scoring team the winner
 * Battalion: Some texts in the mission panel were wrong and misleading
 * Construction Mode: Remove drill strike if added by weapon scheme (it's broken)
 * Construction Mode, Racer, HedgeEditor: No longer play Incoming voice for building stuff, fix other sound problems
 * Capture the Flag: Fix many bugs caused by playing with >2 teams
 * Capture the Flag: Properly place flag when first hog uses kamikaze or TimeBox
 * Capture the Flag: Fix flag not being dropped when carrier uses piano strike
 * CTF_Blizzard: Don't allow more than 2 clans. Excess hogs will be removed

A Space Adventure:
 + Precise Shooting: Display collected ammo
 + Hard Flying: Display personal best at mission start
 + Killing the Specialists: Add event messages and graphical effects
 * Killing the Specialists: Fix very misleading hints in mission panel
 * Killing the Specialists: Fix number of rounds measured being way too low

A Classic Fairytale:
 + Mission 3: Display number of turns left at timed parcours
 + Mission 2, Mission 5: Reduce computer hog levels
 + Mission 6: Change mines
 + Mission 7: Add one additional pick hammer in a crate
 * Fix incorrect storytelling in mission descriptions
 * Missions now work even with corrupted team file, by using a default behaviour
 * Mission 1: Fix error message spam when Leaks a Lot drowns
 * Mission 3: Fix cannibals sometimes doing nothing for a full turn
 * Mission 6: Fix cyborgs sometimes doing nothing for a full turn