@@ -66,6 +66,8 @@ Styles and game modes:
  + HedgeEditor: Show cursor coordinates in top left corner
  + Control: Always remove TimeBox and Resurrector
  + Climb Home: Show messages when a fire cake is nearby and when you're inside home
+ + ShoppaMap: Map complexity can now be changed with the slider
+ + ShoppaMap: Remove script parameter “pad”
  * The Specialists: Less buggy hog switching at turn start
  * Mutant: When game ends due to all land being gone, declare the highest-scoring team the winner
  * Battalion: Some texts in the mission panel were wrong and misleading
